2008-11-25  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.21.

2008-11-25  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.13 release.

2008-11-26  Thomas Thurman  <tthurman@gnome.org>

	* tools/announce-wrangler.py (added): script to produce announcements

2008-11-26  Thomas Thurman  <tthurman@gnome.org>

	* src/core/xprops.c: add casts (#562106)

2008-11-25  Thomas Thurman  <tthurman@gnome.org>

	* metacity.doap: change to standard description.

2008-11-23  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.13.

2008-11-23  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.8 release.

2008-11-23  Thomas Thurman  <tthurman@gnome.org>

        * po/POTFILES.in: add new bindings file

2008-11-23  Daniel Macks  <dmacks@netspace.org>

	reviewed by: Thomas Thurman

	* src/Makefile.am: reorder compiler flags so local includes come last.
	  Closes #562033.

2008-11-23  Daniel Macks  <dmacks@netspace.org>

	reviewed by: Thomas Thurman

	* configure.in: only accept --enable-compositor if we find we can
	  actually composite.  Closes #560990.

2008-11-23  Thomas Thurman  <tthurman@gnome.org>

	* src/core/display.c: remove apparently spurious warnings about
	operations on window "none"

2008-11-23  Thomas Thurman  <tthurman@gnome.org>

	* src/core/util.c: Set _POSIX_C_SOURCE to 200112L as it should always
	have been, in an attempt to close #561962.

2008-11-22  Thomas Thurman  <tthurman@gnome.org>

	* configure.in: Set -ansi so people stop complaining about C99.

2008-11-22  Thomas Thurman  <tthurman@gnome.org>

	* src/core/prefs.c: fix stupid infinite loop when GConf is turned off.

2008-11-22  Thomas Thurman  <tthurman@gnome.org>

	* src/core/prefs.c: fix two places where there was a warning
	if GConf was turned off.

2008-11-22  Thomas Thurman  <tthurman@gnome.org>

        * src/core/all-keybindings.h: "backward", not "backwards" throughout.
