@@ -1,3 +1,8 @@
+2008-11-26  Thomas Thurman  <tthurman@gnome.org>
+
+	* tools/announce-wrangler.py: renamed ini file
+	* tools/commit-wrangler.py: rewriting in terms of moap
+
 2008-11-25  Thomas Thurman  <tthurman@gnome.org>
 
         * configure.in: Post-release bump to 2.25.21.
